Adds new button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   	<input type = "button" class = "btn-warning" value = "submit">
   	<input type = "button" class = "btn-danger" value = "submit">
   	<input type = "button" class = "btn-link" value = "submit">
+    <input type = "button" class = "btn btn" value = "submit">
   </div>
 </div>
  </body>
