--- a/index.html
+++ b/index.html
@@ -9,56 +9,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<title>Basic AngularJS Application</title>
 	<script type="text/javascript" src = "https://code.angularjs.org/1.6.4/angular.js"></script>
-	<script type=" text/javascript" src = "app.js"></script>
+	<script type=" text/javascript" src = "app.js">
 </head>
 <body>
-	<div class = "container">
-	   <h3>Angular Home Page</h3>
-        <div ng-controller = "myController">
-           {{message}}
-        </div>
-    </div>
-    
- <div class="container">          
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div>
-  	
-  	<input type = "button" class = "btn" value = "submit">
-  	<input type = "button" class = "btn-default" value = "submit">
-  	<input type = "button" class = "btn-primary" value = "submit">
-  	<input type = "button" class = "btn-success" value = "submit">
-  	<input type = "button" class = "btn-info" value = "submit">
-  	<input type = "button" class = "btn-warning" value = "submit">
-  	<input type = "button" class = "btn-danger" value = "submit">
-  	<input type = "button" class = "btn-link" value = "submit">
-    <input type = "button" class = "btn btn" value = "submit">
-  </div>
-</div>
+	
  </body>
 </html>
