--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
-<html ng-app = "myApp">
+<html lang="en" ng-app= "myApp">
 <head>
-
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<title>Basic AngularJS Application</title>
-	<script type="text/javascript" src = "https://code.angularjs.org/1.6.4/angular.js"></script>
-	<script type=" text/javascript" src = "app.js">
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
 </head>
 <body>
-	
- </body>
+<script type = "text/javascript" src="https://code.angularjs.org/1.6.4/angular.js
+"></script>
+<script type = "text/javascript" src="https://code.angularjs.org/1.6.4/angular-route.js"></script>
+<script type = "text/javascript" src = "app.js"></script>
+
+
+<nav class="navbar navbar-default" style = "height: 70px;">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#" style ="font-size: 25px; margin-top: 7px;">TechEra Skill Development</a>
+    </div>
+    <ul class="nav navbar-nav" style = "float: right; margin-right: 60px; margin-top: 7px;">
+      <li><a href="#/home">Home</a></li>
+      <li><a href="#/aboutus">About Us</a></li>
+      <li><a href="#/register">Register</a></li>
+      <li><a href="#/login">Login</a></li>
+    </ul>
+  </div>
+</nav>
+<div ng-view>
+
+</div>
+
+<div style= "margin-top: 800px; margin-left: 5px; background-color : pink; height: 30px;">
+<footer>
+ <p>© TECHERA. All Rights Reserved 2017.</p>
+</div>
+</footer>
+
+</body>
 </html>
