--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <script type = "text/javascript" src="https://code.angularjs.org/1.6.4/angular.js
 "></script>
 <script type = "text/javascript" src="https://code.angularjs.org/1.6.4/angular-route.js"></script>
+<script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
+
 <script type = "text/javascript" src = "app.js"></script>
 
 
@@ -22,15 +24,15 @@
       <a class="navbar-brand" href="#" style ="font-size: 25px; margin-top: 7px;">TechEra Skill Development</a>
     </div>
     <ul class="nav navbar-nav" style = "float: right; margin-right: 60px; margin-top: 7px;">
-      <li><a href="#/home">Home</a></li>
-      <li><a href="#/aboutus">About Us</a></li>
-      <li><a href="#/register">Register</a></li>
-      <li><a href="#/login">Login</a></li>
+      <li><a ui-sref="home">Home</a></li>
+      <li><a ui-sref="aboutus">About Us</a></li>
+      <li><a ui-sref="register">Register</a></li>
+      <li><a ui-sref="login">Login</a></li>
     </ul>
   </div>
 </nav>
-<div ng-view>
-
+<div>
+<ui-view></ui-view>
 </div>
 
 <div style= "margin-top: 800px; margin-left: 5px; background-color : pink; height: 30px;">
